# ansible-automation-platform-billing

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  bindep.txt  config.yaml  main.py  requirements.txt  runtests.sh  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  tox.ini
.azure-pipelines/jobs/: tox.yaml
.github/workflows/: snyk.yml  validate.yml
aap_billing/: __init__.py  cli.py  manage.py  settings.py  test_settings.py
aap_billing/aws/: awsapi.py
aap_billing/azure/: azapi.py  storage.py
aap_billing/billing/: models.py
aap_billing/billing/fixtures/: billed.json
aap_billing/billing/migrations/: 0001_initial.py  0002_alter_billingrecord_hosts.py  0003_basequantity_billedhost_reported_and_more.py  0004_billingrecord_add_azure.py  0005_billingrecord_azure_resource_uri_and_more.py
aap_billing/db/: db.py
aap_billing/main/: models.py
aap_billing/main/fixtures/: hosts.json
aap_billing/main/migrations/: 0001_initial.py  0002_host.py
aap_billing/tests/: testBilling.py  test_billing.py
aap_billing/utils/: audit_billing.py  plan_file_loader.py
aap_billing/welcome/: client.py
azure_billing/: azure.py  billing.py  cli.py  cmd.py  db.py  manage.py  settings.py  test_settings.py
azure_billing/azure/: azapi.py
azure_billing/billing/: models.py
azure_billing/billing/fixtures/: installdate.json  rolloverdate.json
azure_billing/db/: db.py  testRouter.py
azure_billing/main/: models.py
azure_billing/main/fixtures/: hosts.json
azure_billing/tests/: testBilling.py
db/: db.py
tools/: tox_install_sonarqube.sh
(+3 files in other folders)
