[metadata]
name = ansible-automation-platform-azure-billing
summary = Ansible Automation Platform Azure billing connector
description-file =
    README.rst
author = Ansible, Inc.
author-email = info@ansible.com
python-requires = >=3.8

[entry_points]
console_scripts =
    aap-azure-billing = azure_billing.cmd:main
    aap-azure-billing-manage = azure_billing.manage:main

[files]
packages =
    azure_billing

[pbr]
warnerrors = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1
