[metadata]
name = ansible-automation-platform-billing
summary = Ansible Automation Platform billing connector
description-file =
    README.md
author = Ansible, Inc.
author-email = info@ansible.com
python-requires = >=3.8

[entry_points]
console_scripts =
    aap-billing = aap_billing.cli:main
    aap-billing-manage = aap_billing.manage:main

[files]
packages =
    aap_billing

[pbr]
warnerrors = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1
